src/test/ui/issues/issue-50802.rs
#[allow(unreachable_code)]

fn main() {
    loop {
        break while continue { //~ ERROR E0590
        }
    }
}
